1999-01-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* glade_ug.texi: Add sections for gnatdist features.

1999-01-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* glade_ug.texi: Add several empty subsections on configuration
	language features.

1999-01-06  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile: Cleanup to avoid useless operations.

	* texinfo.tex: Add support for pictures in PDF files. Sent to the
	maintainer of texinfo.tex/texi2dvi/texi2pdf for integration.

	* glade_ug.texi: Make some changes.

	* all-srcs.ada: Likewise.

1999-01-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* glade_ug.texi: Add part of gnatdist documentation.

1999-01-05  Laurent Pautet  <pautet@scapin.enst.fr>

	* glade_ug.texi: Include user guide.

1999-01-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* glade_ug.texi: More on tutorial and DSA/CORBA comparison.

	* full-ex.fig, xe-arch.fig, corba-arch.fig : Figures
	for full example, DSA architecture and CORBA architecture.

	* full-ex.fig.txt, xe-arch.fig.txt, corba-arch.fig.txt :
	ASCII versions of the previous figures.
	
 	* adjustbb, corba.ssh, Makefile : Script to adjust wrong
	bounding box, a format for a2ps and Makefile.
        
   	* naming.idl, all-srcs.ada : IDL example and all Ada sources in a
	chopable format.

1998-12-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* user_guide.txt: A section on how to trace what is going on
	inside GLADE. How to set S_RPC and S_PARINT.

1998-08-31  Laurent Pautet  <pautet@scapin.enst.fr>

	* user_guide.txt (Note): Add short documentation on reconnection
 	policy. Update Restrictions section.

1997-12-16  Samuel Tardieu  <sam@inf.enst.fr>

	* glade_ug.texi (Top): Remove stubs-related nodes.

	* user_guide.txt: Remote note on stubs now that they are not
	generated anymore.

1997-04-13  Laurent Pautet <pautet@dorine.enst.fr>
        
        * glade_ug.texi: Starting GLADE User Guide (texinfo). user_guide.html
        should be removed.
        